--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RafflesIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RafflesIndex.razor
@@ -44,7 +44,7 @@ else {
                     <td>@raffle.TotalNumberOfTickets</td>
                     <td>@raffle.DrawDateTime.ToShortDateString()</td>
                     <td>@raffle.CurrentState</td>
-                    <td>
+                    <td class="text-end">
                         <a class="btn btn-info" href="@GetEditLink(raffle)">Editar</a>
                     </td>
                 </tr>
