--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Tickets/BuyTickets.razor.css
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Tickets/BuyTickets.razor.css
@@ -44,6 +44,7 @@
     flex: 0 0 66.666667%;
     max-width: 66.666667%;
     padding: 10px;
+    background-color: #f7f7f7;
 }
 
 .raffle-input input,
