User pages translating to Pt-BR.

--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/Disable2fa.razor
@@ -8,25 +8,25 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<Disable2fa> Logger
 
-<PageTitle>Disable two-factor authentication (2FA)</PageTitle>
+<PageTitle>Desativar autenticação de duplo fator (2FA)</PageTitle>
 
 <StatusMessage />
-<h3>Disable two-factor authentication (2FA)</h3>
+<h3>Desativar autenticação de duplo fator (2FA)</h3>
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>This action only disables 2FA.</strong>
+        <strong>Essa ação desativará a 2FA.</strong>
     </p>
     <p>
-        Disabling 2FA does not change the keys used in authenticator apps. If you wish to change the key
-        used in an authenticator app you should <a href="Account/Manage/ResetAuthenticator">reset your authenticator keys.</a>
+        Desabilitar a autenticação em duas etapas (2FA) não altera as chaves usadas nos aplicativos autenticadores. 
+        Se você deseja alterar a chave usada em um aplicativo autenticador, você deve <a href="Conta/Gerenciar/ResetarAutenticador">resetar suas chaves do autenticador.</a>
     </p>
 </div>
 
 <div>
     <form @formname="disable-2fa" @onsubmit="OnSubmitAsync" method="post">
         <AntiforgeryToken />
-        <button class="btn btn-danger" type="submit">Disable 2FA</button>
+        <button class="btn btn-danger" type="submit">Desativar 2FA</button>
     </form>
 </div>
 
@@ -58,7 +58,7 @@
         Logger.LogInformation("User with ID '{UserId}' has disabled 2fa.", userId);
         RedirectManager.RedirectToWithStatus(
             "Account/Manage/TwoFactorAuthentication",
-            "2fa has been disabled. You can reenable 2fa when you setup an authenticator app",
+            "2fa foi desativada. Você pode reativar a 2fa em um App de autenticação.",
             HttpContext);
     }
 }
