--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/SetPassword.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/SetPassword.razor
@@ -9,13 +9,14 @@
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Set password</PageTitle>
+<PageTitle>Crie sua Senha</PageTitle>
 
-<h3>Set your password</h3>
+<h3>Crie sua Senha</h3>
 <StatusMessage Message="@message" />
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Você não possui um nome de usuário/senha local para este site. Adicionar um local
+    conta para que você possa fazer login sem um login externo.
+
 </p>
 <div class="row">
     <div class="col-md-6">
@@ -24,15 +25,15 @@
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
                 <InputText type="password" @bind-Value="Input.NewPassword" class="form-control" autocomplete="new-password" placeholder="Please enter your new password." />
-                <label for="new-password" class="form-label">New password</label>
+                <label for="new-password" class="form-label">Nova Senha</label>
                 <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
                 <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="Please confirm your new password." />
-                <label for="confirm-password" class="form-label">Confirm password</label>
+                <label for="confirm-password" class="form-label">Confirme a Nova Senha</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Set password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Gravar Senha</button>
         </EditForm>
      </div>
 </div>
@@ -74,14 +75,14 @@
     private sealed class InputModel
     {
         [Required]
-        [StringLength(100, ErrorMessage = "The {0} must be at least {2} and at max {1} characters long.", MinimumLength = 6)]
+        [StringLength(100, ErrorMessage = "A {0} deve ter pelo menos {2}, e no máximo {1} characteres.", MinimumLength = 6)]
         [DataType(DataType.Password)]
-        [Display(Name = "New password")]
+        [Display(Name = "Nova Senha")]
         public string? NewPassword { get; set; }
 
         [DataType(DataType.Password)]
-        [Display(Name = "Confirm new password")]
-        [Compare("NewPassword", ErrorMessage = "The new password and confirmation password do not match.")]
+        [Display(Name = "Confirme a Nova Senha")]
+        [Compare("Nova Senha", ErrorMessage = "A Nova Senha e a Confirmação da Nova Senha não são iguais.")]
         public string? ConfirmPassword { get; set; }
     }
 }
