--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/RegisterConfirmation.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/RegisterConfirmation.razor
@@ -10,17 +10,16 @@
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Register confirmation</PageTitle>
+<PageTitle>Confirmação de Registro</PageTitle>
 
-<h1>Register confirmation</h1>
+<h1>Confirmação de Registro</h1>
 
 <StatusMessage Message="@statusMessage" />
 
 @if (emailConfirmationLink is not null)
 {
     <p>
-        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-        Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
+        Normalmente, isso seria enviado por e-mail: <a href="@emailConfirmationLink">Clique aqui para confirmar sua conta</a>
     </p>
 }
 else
