--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/ConfirmEmail.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/ConfirmEmail.razor
@@ -8,9 +8,9 @@
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Confirm email</PageTitle>
+<PageTitle>Confirmação de Email</PageTitle>
 
-<h1>Confirm email</h1>
+<h1>Confirmação de Email</h1>
 <StatusMessage Message="@statusMessage" />
 
 @code {
@@ -36,13 +36,13 @@
         if (user is null)
         {
             HttpContext.Response.StatusCode = StatusCodes.Status404NotFound;
-            statusMessage = $"Error loading user with ID {UserId}";
+            statusMessage = $"Erro de carregamento do usuário de ID {UserId}";
         }
         else
         {
             var code = Encoding.UTF8.GetString(WebEncoders.Base64UrlDecode(Code));
             var result = await UserManager.ConfirmEmailAsync(user, code);
-            statusMessage = result.Succeeded ? "Thank you for confirming your email." : "Error confirming your email.";
+            statusMessage = result.Succeeded ? "Obrigado por confirmar seu e-mail." : "Erro ao confirmar seu e-mail.";
         }
     }
 }
