--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/ChangePassword.razor
@@ -10,9 +10,9 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<ChangePassword> Logger
 
-<PageTitle>Change password</PageTitle>
+<PageTitle>Mudança de Senha</PageTitle>
 
-<h3>Change password</h3>
+<h3>Mudança de Senha</h3>
 <StatusMessage Message="@message" />
 <div class="row">
     <div class="col-md-6">
@@ -21,20 +21,20 @@
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
                 <InputText type="password" @bind-Value="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your old password." />
-                <label for="old-password" class="form-label">Old password</label>
+                <label for="old-password" class="form-label">Senha Antiga</label>
                 <ValidationMessage For="() => Input.OldPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
                 <InputText type="password" @bind-Value="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please enter your new password." />
-                <label for="new-password" class="form-label">New password</label>
+                <label for="new-password" class="form-label">Nova Senha</label>
                 <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
                 <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please confirm your new password." />
-                <label for="confirm-password" class="form-label">Confirm password</label>
+                <label for="confirm-password" class="form-label">Confirme a Nova Senha</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Atualizar Senha</button>
         </EditForm>
     </div>
 </div>
@@ -72,24 +72,24 @@
         await SignInManager.RefreshSignInAsync(user);
         Logger.LogInformation("User changed their password successfully.");
 
-        RedirectManager.RedirectToCurrentPageWithStatus("Your password has been changed", HttpContext);
+        RedirectManager.RedirectToCurrentPageWithStatus("Sua senha foi alterada.", HttpContext);
     }
 
     private sealed class InputModel
     {
         [Required]
         [DataType(DataType.Password)]
-        [Display(Name = "Current password")]
+        [Display(Name = "Senha Atual")]
         public string OldPassword { get; set; } = "";
 
         [Required]
-        [StringLength(100, ErrorMessage = "The {0} must be at least {2} and at max {1} characters long.", MinimumLength = 6)]
+        [StringLength(100, ErrorMessage = "A {0} deve ter pelo menos {2}, e no máximo {1} caracteres.", MinimumLength = 6)]
         [DataType(DataType.Password)]
-        [Display(Name = "New password")]
+        [Display(Name = "Nova Senha")]
         public string NewPassword { get; set; } = "";
 
         [DataType(DataType.Password)]
-        [Display(Name = "Confirm new password")]
+        [Display(Name = "Confirme sua Nova Senha")]
         [Compare("NewPassword", ErrorMessage = "The new password and confirmation password do not match.")]
         public string ConfirmPassword { get; set; } = "";
     }
