--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/DeletePersonalData.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/DeletePersonalData.razor
@@ -10,15 +10,15 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<DeletePersonalData> Logger
 
-<PageTitle>Delete Personal Data</PageTitle>
+<PageTitle>Remover Dados Pessoais</PageTitle>
 
 <StatusMessage Message="@message" />
 
-<h3>Delete Personal Data</h3>
+<h3>Remover Dados Pessoais</h3>
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+        <strong>A remoção de dados pessoais apagará permanentemente sua conta, e não poderá ser recuperada.</strong>
     </p>
 </div>
 
@@ -30,11 +30,11 @@
         {
             <div class="form-floating mb-3">
                 <InputText type="password" @bind-Value="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your password." />
-                <label for="password" class="form-label">Password</label>
+                <label for="password" class="form-label">Senha</label>
                 <ValidationMessage For="() => Input.Password" class="text-danger" />
             </div>
         }
-        <button class="w-100 btn btn-lg btn-danger" type="submit">Delete data and close my account</button>
+        <button class="w-100 btn btn-lg btn-danger" type="submit">Remover dados e encerrar conta.</button>
     </EditForm>
 </div>
 
@@ -60,7 +60,7 @@
     {
         if (requirePassword && !await UserManager.CheckPasswordAsync(user, Input.Password))
         {
-            message = "Error: Incorrect password.";
+            message = "Error: Senha Incorreta.";
             return;
         }
 
