--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/Email.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/Email.razor
@@ -12,9 +12,9 @@
 @inject IdentityUserAccessor UserAccessor
 @inject NavigationManager NavigationManager
 
-<PageTitle>Manage email</PageTitle>
+<PageTitle>Gerenciamento de Email</PageTitle>
 
-<h3>Manage email</h3>
+<h3>Gerenciamento de Email</h3>
 
 <StatusMessage Message="@message"/>
 <div class="row">
@@ -45,10 +45,10 @@
             }
             <div class="form-floating mb-3">
                 <InputText @bind-Value="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true" placeholder="Please enter new email." />
-                <label for="new-email" class="form-label">New email</label>
+                <label for="new-email" class="form-label">Novo email</label>
                 <ValidationMessage For="() => Input.NewEmail" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Change email</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Alterar email</button>
         </EditForm>
     </div>
 </div>
@@ -78,7 +78,7 @@
     {
         if (Input.NewEmail is null || Input.NewEmail == email)
         {
-            message = "Your email is unchanged.";
+            message = "Seu Email não foi alterado.";
             return;
         }
 
@@ -91,7 +91,7 @@
 
         await EmailSender.SendConfirmationLinkAsync(user, Input.NewEmail, HtmlEncoder.Default.Encode(callbackUrl));
 
-        message = "Confirmation link to change email sent. Please check your email.";
+        message = "O link de confirmação foi enviado para seu Email. Por favor, cheque seu Email.";
     }
 
     private async Task OnSendEmailVerificationAsync()
@@ -110,14 +110,14 @@
 
         await EmailSender.SendConfirmationLinkAsync(user, email, HtmlEncoder.Default.Encode(callbackUrl));
 
-        message = "Verification email sent. Please check your email.";
+        message = "Email de verificação enviado. Por favor, verifique seu Email.";
     }
 
     private sealed class InputModel
     {
-        [Required]
+        [Required(ErrorMessage = "O campo {0} deve ser preenchido.")]
         [EmailAddress]
-        [Display(Name = "New email")]
+        [Display(Name = "Novo email")]
         public string? NewEmail { get; set; }
     }
 }
