--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -9,24 +9,24 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<ResetAuthenticator> Logger
 
-<PageTitle>Reset authenticator key</PageTitle>
+<PageTitle>Resetar Chave do Autenticador</PageTitle>
 
 <StatusMessage />
-<h3>Reset authenticator key</h3>
+<h3>Resetar Chave do Autenticador</h3>
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>If you reset your authenticator key your authenticator app will not work until you reconfigure it.</strong>
+        <strong>Se você redefinir a chave do autenticador, seu aplicativo autenticador não funcionará até que você o reconfigure.</strong>
     </p>
     <p>
-        This process disables 2FA until you verify your authenticator app.
-        If you do not complete your authenticator app configuration you may lose access to your account.
+        Este processo desativa o 2FA até que você verifique seu aplicativo autenticador.
+        Se você não concluir a configuração do aplicativo autenticador, poderá perder o acesso à sua conta.
     </p>
 </div>
 <div>
     <form @formname="reset-authenticator" @onsubmit="OnSubmitAsync" method="post">
         <AntiforgeryToken />
-        <button class="btn btn-danger" type="submit">Reset authenticator key</button>
+        <button class="btn btn-danger" type="submit">Resetar Chave do Autenticador</button>
     </form>
 </div>
 
@@ -46,7 +46,7 @@
 
         RedirectManager.RedirectToWithStatus(
             "Account/Manage/EnableAuthenticator",
-            "Your authenticator app key has been reset, you will need to configure your authenticator app using the new key.",
+            "A chave do seu aplicativo autenticador foi redefinida, você precisará configurar seu aplicativo autenticador usando a nova chave.",
             HttpContext);
     }
 }
