--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Buyers/BuyersIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Buyers/BuyersIndex.razor
@@ -49,7 +49,7 @@ else {
     </table>
     </div>
 
-    <Pagination CurrentPage="CurrentPage" 
+    <PagePagination CurrentPage="CurrentPage" 
             TotalPages="Buyers.TotalPages"
             NavigationLink="./buyers"/>
 }
