--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/DrawsIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/DrawsIndex.razor
@@ -46,7 +46,7 @@ else {
         </tbody>
     </table>
 
-    <Pagination CurrentPage="CurrentPage"
+    <PagePagination CurrentPage="CurrentPage"
             TotalPages="Draws.TotalPages"
             NavigationLink="./draws"/>
 }
