--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RafflesIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RafflesIndex.razor
@@ -53,7 +53,7 @@ else {
     </table>
     </div>
 
-    <Pagination CurrentPage="CurrentPage" 
+    <PagePagination CurrentPage="CurrentPage" 
             TotalPages="Raffles.TotalPages"
             NavigationLink="./raffles"/>
 }
