--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
@@ -59,7 +59,7 @@ else {
     </table>
     </div>
 
-    <Pagination CurrentPage="CurrentPage"
+    <PagePagination CurrentPage="CurrentPage"
             TotalPages="Receipts.TotalPages"
             NavigationLink="./receipts"/>
 
